# Ros_wrapper

./: README.md
devel/: .catkin  setup.sh
devel/lib/pkgconfig/: ov_core.pc  ros_wrapper.pc
devel/share/ov_core/cmake/: ov_coreConfig.cmake
devel/share/ros_wrapper/cmake/: ros_wrapperConfig.cmake
ros_wrapper/src/ov_core/: CMakeLists.txt
ros_wrapper/src/ov_core/src/cpi/: CpiV1.h
ros_wrapper/src/ov_core/src/feat/: FeatureDatabase.cpp  FeatureDatabase.h
ros_wrapper/src/ov_core/src/options/: StateOptions.h  VioManagerOptions.cpp  VioManagerOptions.h
ros_wrapper/src/ov_core/src/track/: TrackAruco.cpp  TrackKLT.cpp  TrackKLT.h  TrackMap.cpp  TrackSIM.h
ros_wrapper/src/ov_core/src/utils/: opencv_yaml_parse.h  sensor_data.h
ros_wrapper/src/ros_wrapper/: CMakeLists.txt
ros_wrapper/src/ros_wrapper/config/rs_d455/: estimator_config.yaml  kalibr_imucam_chain.yaml
ros_wrapper/src/ros_wrapper/config/vl_stereo/: estimator_config.yaml  icm40608_imu_chain_sdk.yaml  ov9782_imucam_chain_camera3_sdk.yaml
ros_wrapper/src/ros_wrapper/launch/: my_stereoimu copy.launch  my_t265stereoimu.launch
ros_wrapper/src/ros_wrapper/src/: rgbd_node.cc  stereo_inertial_node.cc  stereo_node.cc
src/ov_core/cmake/: ROS1.cmake
src/ov_core/src/: test_tracking.cpp  test_webcam.cpp
src/ov_core/src/cpi/: CpiBase.h  CpiV1.cpp
src/ov_core/src/options/: StateOptions.h  VioManagerOptions.cpp
src/ov_core/src/track/: Grider_GRID.h  TrackAruco.h  TrackBase.cpp  TrackBase.h  TrackDescriptor.cpp  TrackDescriptor.h  TrackKLT.cpp  TrackKLT.h  TrackKLT1.cpp  TrackKLT1.h  TrackMap.h
src/ov_init/: CMakeLists.txt
src/ov_init/cmake/: NO_ROS.cmake
src/ov_init/src/: test_dynamic_init.cpp  test_dynamic_mle.cpp  test_simulation.cpp
src/ov_init/src/dynamic/: DynamicInitializer.cpp  DynamicInitializer.h
src/ov_init/src/init/: InertialInitializer.cpp  InertialInitializer.h
src/ov_init/src/sim/: SimulatorInit.cpp  SimulatorInit.h
src/ov_init/src/static/: StaticInitializer.cpp  StaticInitializer.h
src/ov_init/src/utils/: helper.h
src/ov_msckf/: CMakeLists.txt
src/ov_msckf/cmake/: ROS1.cmake
src/ov_msckf/launch/: subscribe.launch
src/ov_msckf/src/: ros1_serial_msckf.cpp  run_msckf_mono.cpp  run_simulation.cpp  run_subscribe_msckf.cpp  test_sim_meas.cpp  test_sim_repeat.cpp
src/ov_msckf/src/core/: VioManager.cpp  VioManager.h  VioManagerHelper.cpp
src/ov_msckf/src/ros/: ROS1Visualizer.cpp  ROS1Visualizer.h  ROSVisualizerHelper.cpp  ROSVisualizerHelper.h
src/ov_msckf/src/sim/: Simulator.cpp  Simulator.h
src/ov_msckf/src/state/: Propagator.cpp  Propagator.h  StateHelper.cpp  StateHelper.h
src/ov_msckf/src/update/: UpdaterHelper.cpp  UpdaterMSCKF.cpp  UpdaterMSCKF.h  UpdaterMap.cpp  UpdaterMap.h  UpdaterSLAM.cpp  UpdaterSLAM.h  UpdaterZeroVelocity.cpp  UpdaterZeroVelocity.h
src/ros_wrapper/: CMakeLists.txt  README.md  package.xml
src/ros_wrapper/config/: orb_slam3_with_imu.rviz
src/ros_wrapper/config/cg170_01/: estimator_config.yaml  icm40608_imu_chain.yaml  ov9782_imucam_chain_camera3.yaml
src/ros_wrapper/config/cg170_02/: estimator_config.yaml  ov9782_imucam_chain_camera3.yaml
src/ros_wrapper/config/cg170_03/: ch0x0.yaml  estimator_config.yaml  ov9782_imucam_chain_camera3.yaml
src/ros_wrapper/config/cg170_04/: ch0x0.yaml  estimator_config.yaml  icm40608_imu_chain.yaml  ov9782_imucam_chain_camera3.yaml
src/ros_wrapper/config/cg170_04/1/: icm40608_imu_chain.yaml  ov9782_imucam_chain_camera3.yaml
src/ros_wrapper/config/cg170_04/2/: icm40608_imu_chain.yaml
src/ros_wrapper/config/euroc_mav/: estimator_config.yaml
src/ros_wrapper/config/rs_d455/: estimator_config.yaml
src/ros_wrapper/config/rs_t265/: estimator_config.yaml  kalibr_imu_chain.yaml
src/ros_wrapper/config/vl170_yt_01/: estimator_config.yaml  ov9782_imucam_chain_camera3.yaml
src/ros_wrapper/config/vl_stereo/: estimator_config_sdk.yaml  ov9782_imucam_chain_camera3.yaml
src/ros_wrapper/include/: State.h  common.h
src/ros_wrapper/launch/: live_t265.launch  my_d455.launch  my_euroc.launch  my_imu.launch  my_rtkimu.launch  my_stereo.launch  my_stereoimu copy.launch  my_stereoimu1.launch  my_stereoimu2.launch  play_bag.launch
src/ros_wrapper/scripts/: mysplit.py
src/ros_wrapper/src/: inertial_node.cc  inertial_rtk_node.cc  optical_flow.cpp  stereo_inertial_node.cc  stereo_node.cc
src/ros_wrapper/src/later/: common.cc  mono_inertial_node.cc  mono_node.cc
